docs: let gpt take the wheel with updating llms.txt and README